added ci, fixes and improvements

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,5 @@
 [pytest]
 markers =
     regression: run regression tests
+    smoke: marker that we use for smoke testing
 addopts = -v -s --junitxml=report.xml --alluredir report/
