--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,7 +66,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Download Allure CLI
-        uses: actions/download-allure-action@v1  # Ця action завантажує Allure CLI для Windows
+        uses: allure-framework/allure2  # Ця action завантажує Allure CLI для Windows
       - name: Download all workflow run artifacts
         uses: actions/download-artifact@v3
       - name: Generate Allure report
