--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,9 +66,9 @@ jobs:
     steps:
       - name: Download and install Allure
         run: |
-         curl -o allure-commandline.zip -L "https://repo.maven.apache.org/maven2/io/qameta/allure/allure-commandline/2.17.2/allure-commandline-2.17.2.zip"
-         tar -xvf allure-commandline.zip -C /usr/local/bin/
-         mv /usr/local/bin/allure-2.17.2/bin/allure /usr/local/bin/
+          curl -o allure-commandline.zip -L "https://repo.maven.apache.org/maven2/io/qameta/allure/allure-commandline/2.17.2/allure-commandline-2.17.2.zip"
+          tar -xf allure-commandline.zip
+          Move-Item allure-2.17.2\bin\allure.exe C:\allure\bin\
       - name: Download all workflow run artifacts
         uses: actions/download-artifact@v3
       - name: Generate Allure report
