--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,7 +73,7 @@ jobs:
       - name: Download all workflow run artifacts
         uses: actions/download-artifact@v3
       - name: Generate Allure report
-        run: allure generate -c allure-results -o _site
+        run: C:\allure\bin\allure.bat generate -c allure-results -o _site
       - name: Store generated report
         uses: actions/upload-artifact@v3
         with:
