--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,6 +70,8 @@ jobs:
           powershell -Command "Expand-Archive -Path allure-commandline.zip -DestinationPath ."
           mkdir C:\allure\bin
           Move-Item allure-2.17.2\bin\allure.bat C:\allure\bin\
+          echo %errorlevel% 
+          $env:Path += ";C:\allure\bin"
       - name: Download all workflow run artifacts
         uses: actions/download-artifact@v3
       - name: Generate Allure report
