--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -80,11 +80,11 @@ jobs:
       - name: Check Java version
         run: java -version
       - name: Check Allure version
-        run: C:\allure\bin\allure.bat --version
+        run: allure --version
       - name: Download all workflow run artifacts
         uses: actions/download-artifact@v3
       - name: Generate Allure report
-        run: C:\allure\bin\allure.bat generate -c allure-results -o _site
+        run: allure generate -c allure-results -o _site
       - name: Store generated report
         uses: actions/upload-artifact@v3
         with:
