--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,7 +71,7 @@ jobs:
           distribution: 'microsoft'
       - name: Download and extract Allure
         run: |
-          wget https://github.com/allure-framework/allure2/releases/download/2.23.1/allure-2.23.1.zip
+          Invoke-WebRequest -Uri 'https://github.com/allure-framework/allure2/releases/download/2.23.1/allure-2.23.1.zip' -OutFile 'allure-2.23.1.zip'
           Expand-Archive allure-2.23.1.zip -DestinationPath .
           $env:Path += ";$(Get-Location)\allure-2.23.1\bin"
       - name: Check Java version
