--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,41 +64,49 @@ jobs:
     needs: test  # Запуститься після виконання джоби test, коли всі тести пройдуть
     name: Generate Allure report
     steps:
-      - name: Set up JDK 21
-        uses: actions/setup-java@v3
+#      - name: Set up JDK 21
+#        uses: actions/setup-java@v3
+#        with:
+#          java-version: '21'
+#          distribution: 'microsoft'
+      - uses: actions/checkout@v2
+      - name: Get Allure history
+        uses: actions/checkout@v2
+        if: always()
+        continue-on-error: true
         with:
-          java-version: '21'
-          distribution: 'microsoft'
-      - name: Download and extract Allure
-        run: |
-          Invoke-WebRequest -Uri 'https://github.com/allure-framework/allure2/releases/download/2.23.1/allure-2.23.1.zip' -OutFile 'allure-2.23.1.zip'
-          $allurePath = Split-Path -Path 'allure-2.23.1.zip'
-          $env:Path += ";$($allurePath)\bin"
-          Expand-Archive allure-2.23.1.zip -DestinationPath .
-      - name: Check Java version
-        run: java -version
-      - name: Check Allure version
-        run: allure --version
-      - name: Download all workflow run artifacts
-        uses: actions/download-artifact@v3
-      - name: Generate Allure report
-        run: allure generate -c allure-results -o _site
-      - name: Store generated report
-        uses: actions/upload-artifact@v3
-        with:
-          name: _site
-          path: _site
-          retention-days: 1
+          ref: gh-pages
+          path: gh-pages
+#      - name: Download all workflow run artifacts
+#        uses: actions/download-artifact@v3
 
-  publish_report:
-    runs-on: windows-latest
-    needs: generate-report
-    name: Report publication
-    steps:
-      - name: Download all workflow run artifacts
-        uses: actions/download-artifact@v3
-      - name: Upload Pages artifact
-        uses: actions/upload-pages-artifact@v2
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v1.2.9
+      - name: Generate Allure report
+        uses: simple-elf/allure-report-action@master
+        if: always()
+        id: allure-report
+        with:
+          allure_results: build/allure-results
+          gh_pages: gh-pages
+          allure_report: allure-report
+          allure_history: allure-history
+
+      - name: Deploy report to Github Pages
+        if: always()
+        uses: peaceiris/actions-gh-pages@v2
+        env:
+          PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PUBLISH_BRANCH: gh-pages
+          PUBLISH_DIR: allure-history
+
+#  publish_report:
+#    runs-on: windows-latest
+#    needs: generate-report
+#    name: Report publication
+#    steps:
+#      - name: Download all workflow run artifacts
+#        uses: actions/download-artifact@v3
+#      - name: Upload Pages artifact
+#        uses: actions/upload-pages-artifact@v2
+#      - name: Deploy to GitHub Pages
+#        id: deployment
+#        uses: actions/deploy-pages@v1.2.9
