--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,22 +1,22 @@
 name: CI for OrangeHRM
 
-on:
-  push:
-    branches:
-      - playwright_async_api
+#on:
+#  push:
+#    branches:
+#      - playwright_async_api
 #  schedule:
 #    - cron: '0 0 * * *'  # Запуск кожного дня о півночі
-#on:
-#  workflow_dispatch:
-#    inputs:
-#      deployment_target:
-#        description: Choose target
-#        required: true
-#        default: Smoke tests
-#        type: choice
-#        options:
-#          - Smoke tests
-#          - All tests
+on:
+  workflow_dispatch:
+    inputs:
+      deployment_target:
+        description: Choose target
+        required: true
+        default: Smoke tests
+        type: choice
+        options:
+          - Smoke tests
+          - All tests
 
 permissions:
   contents: read
@@ -34,9 +34,9 @@ jobs:
           node-version: '20'
 
       - name: Set up Python
-        uses: actions/setup-python@v3
+        uses: actions/setup-python@v4
         with:
-          python-version: '3.x'
+          python-version: '3.11'
           node-version: '20'
 
       - name: Install dependencies
@@ -44,9 +44,8 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Run Playwright install
-        run: |
-          playwright install
+      - name: Ensure browsers are installed
+        run: python -m playwright install --with-deps
 
       - name: Smoke tests
         if: "github.event.inputs.deployment_target == 'Smoke tests'"
@@ -57,7 +56,7 @@ jobs:
         run: pytest -v .\Tests --disable-warnings --alluredir=allure-results
         continue-on-error: true
       - name: Store allure results  # Дозволяє скачати в наступій джобі результати виконання тестів. Це артефакт джоби test.
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: allure-results
           path:
