--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ permissions:
 
 jobs:
   test:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         include:
@@ -74,7 +74,7 @@ jobs:
           retention-days: 1
 
   generate-report:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     needs: test
     name: Generate report
     steps:
@@ -95,7 +95,7 @@ jobs:
           retention-days: 1
 
   publish_report:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     needs: generate-report
     name: Report publication
     steps:
