--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,16 +27,9 @@ permissions:
   id-token: write
 
 jobs:
-  test:
+  daily_regression_all_tests:
+    if: github.event_name == 'schedule'
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        include:
-          - name: Daily regression all
-            target: All tests
-          - name: Manual
-            target: ${{inputs.deployment_target}}
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -56,14 +49,8 @@ jobs:
 
       - name: Ensure browsers are installed
         run: python -m playwright install --with-deps
-
-      - name: Run smoke tests
-        if: ${{ matrix.target == 'Smoke tests' }}
-        run: pytest -m "smoke" -v --disable-warnings --alluredir=allure-results
-        continue-on-error: true
       - name: Run all tests
-        if: ${{ matrix.target == 'All tests' }}
-        run: pytest -v .\Tests --disable-warnings --alluredir=allure-results
+        run: pytest -v ./Tests --disable-warnings --alluredir=allure-results
         continue-on-error: true
       - name: Store allure results  # Дозволяє скачати в наступій джобі результати виконання тестів. Це артефакт джоби test.
         uses: actions/upload-artifact@v4
@@ -73,9 +60,51 @@ jobs:
             allure-results
           retention-days: 1
 
+  manual_tests:
+    if: github.event_name == 'workflow_dispatch'
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        target: [Smoke tests, All tests]
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.12.1'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      - name: Ensure browsers are installed
+        run: python -m playwright install --with-deps
+
+      - name: Run smoke tests
+        if: ${{ matrix.target == 'Smoke tests' }}
+        run: pytest -m "smoke" -v --disable-warnings --alluredir=allure-results
+        continue-on-error: true
+
+      - name: Run all tests
+        if: ${{ matrix.target == 'All tests' }}
+        run: pytest -v ./Tests --disable-warnings --alluredir=allure-results
+        continue-on-error: true
+
+      - name: Store allure results
+        uses: actions/upload-artifact@v4
+        with:
+          name: allure-results
+          path: allure-results
+          retention-days: 1
+
   generate-report:
     runs-on: ubuntu-latest
-    needs: test
+    needs: [daily_regression_all_tests, manual_tests]
+    if: needs.daily_regression_all_tests.result == 'success' || needs.manual_tests.result == 'success'
     name: Generate report
     steps:
       - uses: actions/setup-java@v3
