--- a/pytest.ini
+++ b/pytest.ini
@@ -2,4 +2,4 @@
 markers =
     regression: run regression tests
     smoke: marker that we use for smoke testing
-addopts = -v -s --junitxml=report.xml --alluredir report/
+adopts = -v -s --html=C:/PythonPlaywrightStudy/OrangeHRM/Report/report.html
