refactoring fix tests updated pytest.ini to shows correct report updated reporting fixture to show only trace

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,13 @@
 [pytest]
+# Custom markers for organizing test categories
 markers =
     regression: run regression tests
     smoke: marker that we use for smoke testing
-adopts = -v -s --html=C:/PythonPlaywrightStudy/OrangeHRM/Report/report.html
+
+# Default pytest options:
+# - '-v': Run tests in verbose mode to show detailed output.
+# - '-s': Do not capture output (allow print statements to be visible).
+# - '--tb=short': Show short tracebacks in case of test failures.
+# - '--html=...': Generate an HTML test report at the specified path.
+# - '--self-contained-html': Ensure that the HTML report is self-contained, embedding all resources.
+addopts = -v -s --tb=short --html=C:/PythonPlaywrightStudy/OrangeHRM/report.html --self-contained-html
