--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,7 +46,7 @@ jobs:
       - name: Run all tests
         run: pytest -v ./Tests --disable-warnings --alluredir=allure-results
         continue-on-error: true
-      - name: Store allure results  # Дозволяє скачати в наступій джобі результати виконання тестів. Це артефакт джоби test.
+      - name: Store allure results  # Дозволяє звантажити в наступній job результати виконання тестів. Це артефакт джоби test.
         uses: actions/upload-artifact@v4
         with:
           name: allure-results
