--- a/pytest.ini
+++ b/pytest.ini
@@ -10,4 +10,4 @@ markers =
 # - '--tb=short': Show short tracebacks in case of test failures.
 # - '--html=...': Generate an HTML test report at the specified path.
 # - '--self-contained-html': Ensure that the HTML report is self-contained, embedding all resources.
-addopts = -v -s --tb=short --html=C:/PythonPlaywrightStudy/OrangeHRM/report.html --self-contained-html
+addopts = -v -s --tb=short --html=report.html --self-contained-html
